[package]
name = "py_near_primitives"
version = "0.2.5"
edition = "2021"
include = ["/src", "/LICENSE", "/pyproject.toml"]
description = "Python bindings for NEAR Rust primitives."
license = "MIT"

[lib]
name = "py_near_primitives"
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "^1.0.136"
serde_json = "^1.0.59"
derive_more = "0.99.17"
pyo3 = { version = "0.27", features = ["macros", "extension-module", "abi3-py37", "experimental-inspect"] }
borsh = "1.5.7"
near-crypto = "0.33.0"
near-primitives = { version = "0.33.0", features = ["nightly"] }
near-primitives-core = "0.33.0"
